-replaced List.of() methode with Arrays.asList(), the first was immutable -Sorts the players after each event